# Cartoon-Filter

./: .gitignore  .gitmodules  CMakeLists.txt
python-implem/: image.py  main.py  requirements.txt
src/: main.cpp
src/filters/: filters.hpp  kuwahara.cpp  kuwahara.hpp  medianBlur.cpp  sobel.cpp  sobel.hpp  threshold.cpp
src/image/: color.cpp  color.hpp  color.hxx  hsl.cpp  hsl.hpp  hsl.hxx  image.hpp  png.cpp  png.hpp  tifo.cpp  tifo.hpp
